Fix repository structure and organize project files
- Removed nested repository structure
- Moved all project files to root directory for clean organization
- Removed obsolete smart-opd-system directory and emulator files
- Preserved all functionality including:
  * Patient registration with email/password
  * Google Sign-In for patients only
  * Role-based authentication (admin/doctor/patient)
  * Firebase Authentication and Firestore integration
- Updated file structure for better GitHub deployment
- Maintained all existing features and UI design

--- a/dashboard.html
+++ b/dashboard.html
@@ -43,5 +43,14 @@
       location.href = 'index.html';
     });
   </script>
+
+	<footer class="footer">
+		<div class="footer-content">
+			<strong>Built by Atharva Mirzapure</strong>
+			<p>B.Tech (2nd Year) Student | Smart OPD Queue Management System</p>
+			<p>© 2026 Smart OPD System. All rights reserved.</p>
+		</div>
+	</footer>
+
 </body>
 </html>
